--- a/app/build.gradle
+++ b/app/build.gradle
@@ -99,6 +99,9 @@ dependencies {
     // Integration with ViewModels
     implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:1.0.0-alpha07'
 
+    // Retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
     // UI Tests
     androidTestImplementation("androidx.compose.ui:ui-test-junit4:1.0.1")
