--- a/app/build.gradle
+++ b/app/build.gradle
@@ -103,6 +103,10 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
+    // Coil
+    implementation 'io.coil-kt:coil:1.4.0'
+    implementation 'io.coil-kt:coil-compose:1.4.0'
+
     // UI Tests
-    androidTestImplementation("androidx.compose.ui:ui-test-junit4:1.0.1")
+    androidTestImplementation 'androidx.compose.ui:ui-test-junit4:1.0.1'
 }
